--- a/Polymers lab/3/LAB 3.tex
+++ b/Polymers lab/3/LAB 3.tex
@@ -97,7 +97,11 @@ width0pt\right\delimright_{\rlap{$\scriptstyle#3$}}$};}}
 
 \begin{chapterabstract}
 
-Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nam eu consequat dolor. Cras ultricies lorem sed erat imperdiet, venenatis varius nisl facilisis. Proin a ipsum semper, pretium dui eget, auctor nulla. Vestibulum blandit lorem aliquet justo consequat, sodales semper eros tincidunt. Mauris congue ex eu sodales laoreet. Pellentesque habitant morbi tristique senectus et netus et malesuada fames ac turpis egestas. Sed nisl dui, vestibulum eu blandit eget, finibus eget urna. Fusce in dictum mi. Nullam vehicula orci dolor, nec euismod eros imperdiet at. Duis vitae vulputate risus, et facilisis ante. 
+Different polymer properties were evaluated by performing Vicat test, Melt Flow Index (MFI) analysis, Shore Hardness and Limiting Oxygen Flammability (LOI).
+Vicat test was used to estimate the deformability of three polymers: polycarbonate (PC), acrylonitrile butadiene styrene (ABS) and polypropylene (PP). Since PS and ABS are amorphous polymers, the Vicat temperatures do not change with the load, while for PP, which is a semi crystalline polymer, Vicat temperature varies with the load.
+With MFI analyses some rheological reckonings are possible. First, the MFI increases exponentially with temperature and the applied load; moreover, by testing three different polypropylenes, increasing the MFI, the molecular weight (Mw) decreases exponentially. The phenomenon of die swelling also depends on Mw: for higher molecular weight, the die swell is lower due to high possibility of orientation of longer chains. The results of MFI calculations were also used to evaluate the Activation Energy (Ea) of viscous flow; for PH7079 the average E Is 50.60 6.53 kJ/mol.
+Shore Hardness test was used to measure the hardness of different polymers. It was found that the Shore A test is suitable for the softer materials while Shore D is suitable for the harder ones. It is interesting to notice that Polyurethane (PU), which is a thermoset polymer, shows a wide range of hardness (Shore-A) from 50 to 95.
+Limiting Oxygen Index was used to investigate the relative flammability of four polymers i.e. Polyethylene (PE), PP, PC and ABS. PC has the higher LOI (33%) resulting less flammable than the others.
 
 \end{chapterabstract} 
 
@@ -439,6 +443,12 @@ The following Table \ref{tab:loi} reports the main results obtained by this test
 PC sample reacts with a higher amount of blowed oxygen, meaning that this polymer is less flammable than the others.
 \newpage 
 \section{Conclusions}
+
+There are many different techniques useful to analyse different polymer properties. In this laboratory session Vicat test, MFI, Shore Hardness and LOI were used to investigate thermal evolution of stiffness, hardness, flammability and some rheological properties of given polymers.
+Vicat temperature for amorphous polymers (like PC and ABS) corresponds to glass transition temperature at which the polymer collapses under any load; but, for semi crystalline polymers (like PP) the Vicat temperature varies with the load due to the rubbery amorphous phase which can be easily penetrated by the indent.
+The Melt Flow Index is a parameter, which defines polymers ability to flow under certain conditions of load and temperature, therefore, some rheological reckonings are possible by MFI measurements. Increasing the temperature and the applied load, the MFI increases exponentially due to a decrease of viscosity. Since the MFI follows an Arrhenius-like dependence with the temperature, it is also possible to estimate the Activation Energy of viscous flow. Molecular weight is related to MFI: for high values MFI, the Mw decreases exponentially like Mark–Houwink–Sakurada equation predicts. Moreover, die swelling is a common phenomenon in MFI and experimental data show that it has been influenced by applied load, temperature and molecular weight.
+The Shore A and Shore D techniques are used to perform hardness tests on polymer samples: the first one is suitable for softer polymers while the second one is suitable for harder polymers.
+The LOI is the minimum oxygen percentage needed to ignite a polymer bar which will have to maintain the flame for at least 3 minutes. This percentage is then used to compare polymer flammability.
 
 \newpage
 
