--- a/Polymers lab/2/Lab 2.tex
+++ b/Polymers lab/2/Lab 2.tex
@@ -644,4 +644,56 @@ of different products contained in the blend added to the ABS rubber, such as oi
 
 \end{thebibliography}
 
+\section{Appendix}
+
+\subsection{Density measuraments}
+
+\begin{table}[htp]
+\centering
+$
+\begin{array}{lcccc}
+\toprule
+\textbf{Sample} & \textbf{Specimen} & \textbf{Weight in air}\,(g) & \textbf{Weight in water}\,(g) & \mathbf{\rho}\,(kg/m^{3})\\
+\midrule
+\text{PET} & \text{a} & 0.7114 & 0.1684 & 1307\\
+& \text{b} & 0.8203 & 0.1984 & 1316\\
+& \text{c} & 0.8376 & 0.2029 & 1317\\
+\midrule
+\text{PET-T1} & \text{a} & 0.6929 & 0.1720 &  1327\\
+& \text{b} & 0.8050 & 0.2015 & 1331\\
+& \text{c} & 0.3537 & 0.0874 & 1325\\
+& \text{d} & 0.5248 & 0.1301 & 1326\\
+\midrule
+\text{PET-T2} & \text{a} & 0.7491 & 0.1888 & 1334\\
+& \text{b} & 0.7711 & 0.1959 & 1337\\
+& \text{c} & 0.5891 & 0.1499 & 1338\\
+\bottomrule
+\end{array}
+$
+\caption{Weight and density measurements of PET bottles with different thermal treatment.}
+\label{tab:admt}
+\end{table}
+
+\begin{table}[htp]
+\centering
+$
+\begin{array}{lcccc}
+\toprule
+\textbf{Sample} & \textbf{Specimen} & \textbf{Weight in air}\,(g) & \textbf{Weight in water}\,(g) &  \mathbf{\rho}\,(kg/m^{3})\\
+\midrule
+\text{pure} & 1 & 1.1579 & 0.1817 & 1183\\
+& 2 & 0.8851 & 0.1388 & 1183\\
+\midrule
+\text{P2} & \text{A} & 3.1649 & 0.6074 & 1235\\
+& \text{D} & 4.6149 & 0.9135 & 1244\\
+\midrule
+\text{P2 after TT} & \text{C} & 2.1841 & 0.4442 & 1252\\
+& \text{B} & 2.6498 & 0.5039 & 1232\\
+\bottomrule
+\end{array}
+$
+\caption{Weight and density of PMMA samples.}
+\label{tab:apmma}
+\end{table}
+
 \end{document}
