--- a/Polymers lab/2/Lab 2.tex
+++ b/Polymers lab/2/Lab 2.tex
@@ -644,6 +644,8 @@ of different products contained in the blend added to the ABS rubber, such as oi
 
 \end{thebibliography}
 
+\newpage
+
 \section{Appendix}
 
 \subsection{Density measuraments}
