--- a/Polymers lab/3/LAB 3.tex
+++ b/Polymers lab/3/LAB 3.tex
@@ -305,7 +305,10 @@ PP instead is a semicrystalline polymer, so its Vicat temperature varies conside
 In Figure \ref{fig:dieswell} die swell measurements for PP-1 sample in function of pressure and temperature are reported.
 \begin{figure}[h!]
 	\centering
-	{\includegraphics[scale=0.4]{dieswell}}
+	\subfloat[][]
+	{\includegraphics[scale=0.4]{dieswell}} \quad 
+	\subfloat[][]
+	{\includegraphics[scale=0.4]{dieswell2}}
 	\captionsetup{justification=centering}
 	\caption{Die swelling for PP–1 sample.}
 	\label{fig:dieswell}
