--- a/Polymers lab/3/LAB 3.tex
+++ b/Polymers lab/3/LAB 3.tex
@@ -204,7 +204,7 @@ An amount of granules for melt flow index analysis has been used in order to man
 
 \subsection{Vicat analysis (VST)}
 
-The test has been carried out in two configurations, with instrument Vicat Tester MP/3:
+The test has been carried out in two configurations, with instrument Vicat Tester MP/3 and according to the normative ASTM~\cite{VICAT}:
 
 \begin{itemize}
 
@@ -283,17 +283,17 @@ Analyzing the intersection between the curves and the penetration of 1 mm the fo
 \begin{table}[htp]
 	\centering
 	$
-	\begin{array}{ccc}
+	\begin{array}{ccccc}
 	\toprule
-	\textbf{Sample} & \mathbf{T_{vicat}^\textbf{10}} & \mathbf{T_{vicat}^\textbf{50}} \\
+	\textbf{Sample} & \mathbf{T_{m}} & \mathbf{T_{g}} & \mathbf{T_{vicat}^\textbf{10}} & \mathbf{T_{vicat}^\textbf{50}} \\
 	\midrule
-	\text{PC} & 154.6 & 150.0\\
-	\text{ABS} & 107.8 & 98.0\\
-	\text{PP} & 148.6 & 99.2\\
+	\text{PC} & - & 149 & 154.6 & 150.0\\
+	\text{ABS} & 230 & 105 & 107.8 & 98.0\\
+	\text{PP} & 165 & -10 & 148.6 & 99.2\\
 	\bottomrule
 	\end{array}
 	$
-	\caption{Vicat temperatures.}
+	\caption{Vicat temperatures ($\circ$C).}
 	\label{tab:vicatt}
 \end{table}
 
@@ -463,6 +463,7 @@ The LOI is the minimum oxygen percentage needed to ignite a polymer bar which wi
 \bibitem{handbook} Polymer handbook, J. Brandrup, E.H. Immergut.
 \bibitem{MFI} ASTM D1238–10 "Melt flow rates of thermoplastics by extrusion". 
 \bibitem{LOI} ASTM D2863–06a "Standard test method for measuring the minimum oxygen concentration to support candle-like combustion of plastics".
+\bibitem{VICAT} ASTM D1525
 
 \end{thebibliography}
 
