--- a/Polymers lab/2/Lab 2.tex
+++ b/Polymers lab/2/Lab 2.tex
@@ -136,7 +136,7 @@ PE is a semicrystalline polymer and due to its low glass transition temperature 
 \polymerdelim[delimiters = (), height = 15pt, indice = \!\!n]{left}{right}
 \end{figure}
 
-PS presents an aromatic ring in his structure that leads to a steric envelope responsable of the low mobility of the chain. Therefore it's an amorphus and rigid polymer.
+PS presents an aromatic ring in his structure that leads to a steric envelope responsable of the low mobility of the chain. Therefore it's an amorphous and rigid polymer.
 
 \begin{figure}[htp]
 	\centering
@@ -225,16 +225,16 @@ The polymeric materials that have been used are: plastic yogurt cup (PS), dispos
 \begin{table}[htp]
 	\centering
 	$
-	\begin{array}{lcc}
+	\begin{array}{lccc}
 	\toprule
-	\textbf{Materials} &  \mathbf{T_{g}} (^\circ\text{C}) \ & \mathbf{T_{m}}(^\circ\text{C}) \\
+	\textbf{Materials} &  \mathbf{Density}\,(g/cm^{3})  & \mathbf{T_{g}} (^\circ\text{C}) \ & \mathbf{T_{m}}(^\circ\text{C}) \\
 	\midrule
-	\text{High density polyethylene (PE)} & -110 & 138 \\
-	\text{Polystyrene (PS)} & 100 & -  \\
-	\text{Polypropylene (PP)} & -10  & 165  \\
-	\text{Polyethylene terephthalate (PET)} & 70 & 265  \\
-	\text{Polylactic acid (PLA)} & 50 & 140 \\
-	\text{Polymethyl methacrylate (PMMA)} & 105  & - \\
+	\text{High density polyethylene (PE)} & 0.94 & -110 & 138 \\
+	\text{Polystyrene (PS)} & 1.04 & 100 & -  \\
+	\text{Polypropylene (PP)} & 0.95 & -10  & 165  \\
+	\text{Polyethylene terephthalate (PET)} & 1.38 & 70 & 265  \\
+	\text{Polylactic acid (PLA)} & 1.27 & 50 & 140 \\
+	\text{Polymethyl methacrylate (PMMA)} & 1.18 & 105  & - \\
 	\bottomrule
 	\end{array}
 	$
