Added super Puglia

--- a/Polymers lab/3/LAB 3.tex
+++ b/Polymers lab/3/LAB 3.tex
@@ -332,7 +332,10 @@ In Figure \ref{fig:dieswell} die swell measurements for PP-1 sample in function 
 	\caption{Die swelling for PP–1 sample.}
 	\label{fig:dieswell}
 \end{figure}\\
-From Figure \ref{fig:dieswell} it can be noticed that die swell increases with the applied load. This can be explained by the fact that higher loads means higher pressures and consequently, when the material exits from the die, it will present a higher relaxation of tensions thus a higher die swelling. Moreover it can be observed that die swell is not affected by the increment of temperature. \\
+From Figure \ref{fig:dieswell} it can be noticed that die swell increases with the applied load. This can be explained by the fact that higher loads means higher pressures and consequently, when the material exits from the die, it will present a higher relaxation of tensions thus a higher die swelling. 
+In Figure \ref{fig:dieswell} die swell measurements for PP–1 sample as a function of the applied load for the three different temperatures are reported.
+The experimental data in Figure \ref{fig:dieswell} follow a linear behaviour and the intercepts from the regression lines give us the value of the die swell without any load applied. These values can be related to the effect of temperature on swelling; it is known that a rise in temperature can increase the rate of stress relaxation, leading to a decrease in extrudate swell. Moreover, a reduction of viscosity caused by an increase in temperature contributes to a decrease in extrudate swell, because of a reduction in stress applied to polymer molecules. 
+Therefore, there is a competition between these two effects; in fact, an increase in applied load decreases the die swell while increasing the temperature, the swell reduces~\cite{article}.  \\
 In Figure \ref{fig:mfi} melt flow index chart in function of temperature and parametric with pressure for PP–1 sample is reported.
 \begin{figure}[h!]
 	\centering
@@ -483,6 +486,7 @@ The LOI is the minimum oxygen percentage needed to ignite a polymer bar which wi
 \bibitem{MFI} ASTM D1238–10 "Melt flow rates of thermoplastics by extrusion". 
 \bibitem{LOI} ASTM D2863–06a "Standard test method for measuring the minimum oxygen concentration to support candle-like combustion of plastics".
 \bibitem{VICAT} ASTM D1525 "Standard test method for Vicat softening temperature of plastics"
+\bibitem{article} A review of extrudate swell in polymers - C. Sirisinha – J.Sci.Soc.Thailand 23-259-280.
 
 \end{thebibliography}
 
