--- a/Polymers lab/3/LAB 3.tex
+++ b/Polymers lab/3/LAB 3.tex
@@ -357,7 +357,7 @@ From Figure \ref{fig:mfi2} it can be noticed that increasing the applied load th
 
 \subsubsection{Molecular weight calculation}
 
-In Figure \ref{fig:mw} the dependency of molecular weight in function of the MFI is reported.
+In Figure \ref{fig:mw} the dependency of molecular weight in function of the MFI is reported~\cite{handbook}.
 \begin{figure}[h!]
 	\centering
 	{\includegraphics[scale=0.4]{mw}}
@@ -365,7 +365,12 @@ In Figure \ref{fig:mw} the dependency of molecular weight in function of the MFI
 	\caption{Dependency of molecular weight and MFI for polypropylene.}
 	\label{fig:mw}
 \end{figure}\\
-The Figure \ref{fig:mw} shows that increasing MFI the molecular weight decreases exponentially.\\ In Table \ref{tab:mw} the values of MFI and molecular weight are reported for the three types of PP evaluted at $230 ^\circ$C under $2.16$ \text{kg}.
+The Figure \ref{fig:mw} shows that increasing MFI the molecular weight decreases exponentially. From interpolation the resulting expression is reported in Equation \ref{eq:mw}. 
+\begin{equation}
+\text{MFI} = 1091\cdot \exp({-2.729\cdot 10^{-05}\cdot\text{MW}})
+\label{eq:mw}
+\end{equation}
+In Table \ref{tab:mw} the values of MFI and molecular weight are reported for the three types of PP evaluted at $230 ^\circ$C under $2.16$ \text{kg}.
 \begin{table}[htp]
 \centering
 $
