--- a/Polymers lab/3/LAB 3.tex
+++ b/Polymers lab/3/LAB 3.tex
@@ -134,7 +134,7 @@ Vicat analysis has been done on ready made samples of polycarbonate (PC), acrylo
 	\subfloat[][]
 	{\includegraphics[align=c,scale=0.07]{abs}} \quad 
 	\subfloat[][]
-	{\includegraphics[align=c,scale=0.9]{pc}} \quad
+	{\includegraphics[align=c,scale=0.9]{PC}} \quad
 	\subfloat[][]
 	{\includegraphics[align=c,scale=0.08]{pp}}  
 	\captionsetup{justification=centering}
