--- a/Polymers lab/3/LAB 3.tex
+++ b/Polymers lab/3/LAB 3.tex
@@ -312,7 +312,7 @@ Analyzing the intersection between the curves and the penetration of 1 mm the fo
 	\bottomrule
 	\end{array}
 	$
-	\caption{Vicat temperatures ($\circ$C).}
+	\caption{Vicat temperatures ($^\circ$C).}
 	\label{tab:vicatt}
 \end{table}
 
