--- a/Polymers lab/3/LAB 3.tex
+++ b/Polymers lab/3/LAB 3.tex
@@ -280,6 +280,8 @@ Different polymeric specimens have been tested: for each, three mesurements has 
 
 Analyzed polymers are PE, PP, PC and ABS, with instrument Ceast Oxygen Index. This test allows to predict the behaviour of polymers when they are exposed to the flame. Air is blowed in the working column and the amount of oxygen is carefully modulated (its value has been taken around 21\%). Specimens are exposed to the flame for three minutes, accordingly to standard procedure by ASTM~\cite{LOI}.
 
+\newpage
+
 \section{Results and discussion}
 
 \subsection{Vicat analysis (VST)}
@@ -319,15 +321,17 @@ Analyzing the intersection between the curves and the penetration of 1 mm the fo
 Since PC and ABS are amorphous polymers, their Vicat temperatures don't change substantially with the load. This is due to the fact that the Vicat temperature corresponds to the glass transition temperature $T_{g}$ at which the polymer collapses under any load.
 PP instead is a semicrystalline polymer, so its Vicat temperature varies considerably with the load. This can be explained by the presence of a rubbery amorphous phase that can be easily penetrated by the indent. The higher the load, the faster is the penetration.
 
+\newpage
+
 \subsection{Melt flow index (MFI) measurement}
 
 In Figure \ref{fig:dieswell} die swell measurements for PP-1 sample in function of pressure and temperature are reported.
 \begin{figure}[h!]
 	\centering
 	\subfloat[][]
-	{\includegraphics[scale=0.4]{dieswell}} \quad 
+	{\includegraphics[scale=0.29]{dieswell}} \quad 
 	\subfloat[][]
-	{\includegraphics[scale=0.4]{dieswell2}}
+	{\includegraphics[scale=0.13]{dieswell2}}
 	\captionsetup{justification=centering}
 	\caption{Die swelling for PP–1 sample.}
 	\label{fig:dieswell}
@@ -336,21 +340,17 @@ From Figure \ref{fig:dieswell} it can be noticed that die swell increases with t
 In Figure \ref{fig:mfi} melt flow index chart in function of temperature and parametric with pressure for PP–1 sample is reported.
 \begin{figure}[h!]
 	\centering
-	{\includegraphics[scale=0.4]{mfi}}
+	\subfloat[][]
+	{\includegraphics[scale=0.4]{mfi}} \quad
+	\subfloat[][]
+	{\includegraphics[scale=0.4]{mfi2}}
 	\captionsetup{justification=centering}
 	\caption{Melt flow index for PP–1 sample.}
 	\label{fig:mfi}
 \end{figure}\\
-Figure \ref{fig:mfi} shows that MFI increases exponentially with temperature. This behaviour is due to the decrease of viscosity at higher temperature and thus a better flowability of the material.\\
-In Figure \ref{fig:mfi2} melt flow index chart in function of pressure and parametric with temperature for PP–1 sample is reported.
-\begin{figure}[h!]
-	\centering
-	{\includegraphics[scale=0.4]{mfi2}}
-	\captionsetup{justification=centering}
-	\caption{Melt flow index for PP–1 sample.}
-	\label{fig:mfi2}
-\end{figure}\\
-From Figure \ref{fig:mfi2} it can be noticed that increasing the applied load the melt flow index increases exponentially due to higher applied pressures.
+Figure \ref{fig:mfi} shows that MFI increases exponentially with temperature. This behaviour is due to the decrease of viscosity at higher temperature and thus a better flowability of the material. It can be noticed that increasing the applied load the melt flow index increases exponentially due to higher applied pressures.
+
+\newpage
 
 \subsubsection{Molecular weight calculation}
 
@@ -377,8 +377,7 @@ $
 $
 \caption{MFI and MW values of the three types of PP.}
 \label{tab:mw}
-\end{table}
-\newpage
+\end{table}\\
 The molecular weight influences also the die swell. In Table \ref{tab:dieswell} the die swell values of the three types of PP evaluted at $230 ^\circ$C under $2.16$ \text{kg} are reported.
 \begin{table}[htp]
 \centering
@@ -395,6 +394,8 @@ $
 \label{tab:dieswell}
 \end{table}\\
 It can be seen that the higher the molecular weight the lower die swell values. High molecular weight means longer chains and this leads to high possibility of orientation and consequently a less expansion of diameter at the die exit.
+
+\newpage
 
 \subsubsection{Activation energy calculation}
 
@@ -425,8 +426,6 @@ $
 \caption{Activation energy.}
 \label{tab:energy}
 \end{table}
-
-\newpage
 
 \subsection{Shore hardness measurement}
 
@@ -464,7 +463,7 @@ The following Table \ref{tab:loi} reports the main results obtained by this test
 \end{table}
 
 PC sample reacts with a higher amount of blowed oxygen, meaning that this polymer is less flammable than the others.
-\newpage 
+ 
 \section{Conclusions}
 
 There are many different techniques useful to analyse different polymer properties. In this laboratory session Vicat test, MFI, Shore hardness and LOI were used to investigate thermal evolution of stiffness, hardness, flammability and some rheological properties of given polymers.
