--- a/Polymers lab/2/Lab 2.tex
+++ b/Polymers lab/2/Lab 2.tex
@@ -112,11 +112,12 @@ PET bottles have been produced by injection blow molding, a process in which a c
 
 \subsubsection{Polyethylene}
 
-\begin{figure}[h]
-\centering
-\chemfig{-[@{left,.5}]C(-[2]H)(-[6]H)-C(-[2]H)(-[6]H)-[@{right,0.75}]} 
-\polymerdelim[delimiters = (), height = 15pt, indice = \!\!n]{left}{right}
-\end{figure} 
+\begin{figure}[htp]
+	\centering
+	{\includegraphics[scale=0.3]{pe_chem}}
+	\captionsetup{justification=centering}
+	\label{fig:PE}
+\end{figure}
 PE is a semicrystalline polymer and due to its low glass transition temperature (below room temperature) it shows a certain deformability.
 \begin{figure}[htp]
 	\centering
@@ -130,12 +131,12 @@ PE is a semicrystalline polymer and due to its low glass transition temperature 
 
 \subsubsection{Polystyrene}
 
-\begin{figure}[h]
-\centering
-\chemfig{-[@{left,.5}]C(-[2]H)(-[6]H)-C(-[2]H)(-[6](*6(-=-=-=)))-[@{right,0.75}]} 
-\polymerdelim[delimiters = (), height = 15pt, indice = \!\!n]{left}{right}
+\begin{figure}[htp]
+	\centering
+	{\includegraphics[scale=0.06]{ps_chem}}
+	\captionsetup{justification=centering}
+	\label{fig:PE}
 \end{figure}
-
 PS presents an aromatic ring in his structure that leads to a steric envelope responsable of the low mobility of the chain. Therefore it's an amorphous and rigid polymer.
 
 \begin{figure}[htp]
@@ -151,17 +152,17 @@ PS presents an aromatic ring in his structure that leads to a steric envelope re
 
 \subsubsection{Polypropylene}
 
-\begin{figure}[h]
-\centering
-\chemfig{-[@{left,.5}]C(-[2]H)(-[6]H)-C(-[2]H)(-[6]CH_3)-[@{right,0.75}]} 
-\polymerdelim[delimiters = (), height = 15pt, indice = \!\!n]{left}{right}
+\begin{figure}[htp]
+	\centering
+	{\includegraphics[scale=0.32]{pp_chem}}
+	\captionsetup{justification=centering}
+	\label{fig:PE}
 \end{figure}
-
 PP is a tough and rigid thermoplastic material. Isotactic conformation is obtained by Ziegler-Natta or metallocene polymerization. It shows an high thermal stability due to its semycrystalline structure.
 
 \begin{figure}[h!]
 	\centering
-	{\includegraphics[scale=0.18]{pp}}
+	{\includegraphics[scale=0.18]{PP}}
 	\captionsetup{justification=centering}
 	\caption{PP sample.}
 	\label{fig:PP}
@@ -171,17 +172,18 @@ PP is a tough and rigid thermoplastic material. Isotactic conformation is obtain
 
 \subsubsection{Polyethylene terephthalate}
 
-\begin{figure}[h]
-\centering
-\chemfig{-[@{left,.5}]O-[:60](=[:120]O)-(*6(-=-(-(=[:60]O)-[:-60]O-CH_2-CH_2-[@{right,0.75}])=-=))} 
-\polymerdelim[delimiters = (), height = 15pt, indice = \!\!n]{left}{right}
+\begin{figure}[htp]
+	\centering
+	{\includegraphics[scale=0.45]{pet_chem}}
+	\captionsetup{justification=centering}
+	\label{fig:PE}
 \end{figure}
 
 PET is a naturally colorless, semi-crystalline material. Some of its most important characteristics include: water resistance, high strength despite low density, shatterproofness and its wide availability as an economic and recyclable plastic.
 
 \begin{figure}[htp]
 	\centering
-	{\includegraphics[scale=0.17]{PET}}
+	{\includegraphics[scale=0.15]{PET}}
 	\captionsetup{justification=centering}
 	\caption{PET sample.}
 	\label{fig:PET}
@@ -189,17 +191,17 @@ PET is a naturally colorless, semi-crystalline material. Some of its most import
 
 \subsubsection{Polyactic acid}
 
-\begin{figure}[h]
-\centering
-\chemfig{[:30]HO-[@{left,.5}](-[2]CH_3)-[:-30](=[6]O)-[:30]O-[@{right,0.75}:-30]CH_3} 
-\polymerdelim[delimiters = (), height = 15pt, indice = \!\!n]{left}{right}
+\begin{figure}[htp]
+	\centering
+	{\includegraphics[scale=0.05]{pla_chem}}
+	\captionsetup{justification=centering}
+	\label{fig:PE}
 \end{figure}
-
 PLA is an amorphous, biodegradable and bioactive thermoplastic polymer derived from renewable resources like corn starch or sugar cane. It is principally made through condensation and ring-opening polymerization.
 
 \begin{figure}[h!]
 	\centering
-	{\includegraphics[scale=0.2]{PLA}}
+	{\includegraphics[scale=0.18]{PLA}}
 	\captionsetup{justification=centering}
 	\caption{PLA sample.}
 	\label{fig:PLA}
@@ -208,11 +210,11 @@ PLA is an amorphous, biodegradable and bioactive thermoplastic polymer derived f
 \subsubsection{Polymethyl methacrylate}
 
 \begin{figure}[h!]
-\centering
-\chemfig{[:-30]-[@{left,.5}]-[:30](-[2](=[1]O)(-[3]O-[2]CH_3))(-[6,1.5]CH_3)-[@{right,0.75}:-30]} 
-\polymerdelim[delimiters = (), height = 15pt, indice = \!\!n]{left}{right}
+	\centering
+	{\includegraphics[scale=0.3]{pmma_chem}}
+	\captionsetup{justification=centering}
+	\label{fig:PE}
 \end{figure}
-
 PMMA  is a transparent thermoplastic non-cross linked polymer often used as a lightweight or shatter-resistant alternative to glass.
 
 \newpage 
@@ -588,9 +590,9 @@ In Figure \ref{fig:tga}a-b the TGA thermograms of PMMA and T samples are reporte
 \begin{figure}[htp]
 \centering
 \subfloat[][]
-{\includegraphics[scale=0.3]{tgaPMMA}} \quad 
+{\includegraphics[scale=0.4]{tgaPMMA}} \quad 
 \subfloat[][]
-{\includegraphics[scale=0.3]{tgaT}} \quad 
+{\includegraphics[scale=0.4]{tgaT}} \quad 
 \captionsetup{justification=centering}
 \caption{TGA thermograms for (a) PMMA and (b) T samples.}
 \label{fig:tga}
