--- a/Polymers lab/2/Lab 2.tex
+++ b/Polymers lab/2/Lab 2.tex
@@ -643,6 +643,7 @@ of different products contained in the blend added to the ABS rubber, such as oi
 \bibitem{handbook} Polymer handbook, J. Brandrup, E.H. Immergut.
 \bibitem{gommista} HF. Mark et al. Encyclopedia of Polymer Science and Technology.
 \bibitem{densità} ASTM D792 "Standard test methods for density and specific gravity of plastics by displacement".
+\bibitem{gruppo1} Previous laboratory activities of Group 1 PME 2018/19, University of Trento. 
 
 \end{thebibliography}
 
