--- a/Polymers lab/1/Polymers 1.tex
+++ b/Polymers lab/1/Polymers 1.tex
@@ -299,14 +299,9 @@ The specific heat of MMA for the second polymerization has been taken equal to t
 In Figure \ref{fig:Tt} the charts reporting temperature ramp over time for three polymerizations are reported. 
 \begin{figure}[htp]
 \centering
-\subfloat[][]
-{\includegraphics[scale=0.275]{1}} \quad 
-\subfloat[][]
-{\includegraphics[scale=0.275]{2}} \quad 
-\subfloat[][]
-{\includegraphics[scale=0.275]{3}}
+{\includegraphics[scale=0.35]{heatrelease}}
 \captionsetup{justification=centering}
-\caption{Time-temperature charts for three polymerization: (a) S1, (b) S2 and (c) S3.}
+\caption{Time-temperature charts for S1 S2 and S3 samples.}
 \label{fig:Tt}
 \end{figure}\\
 A correlation between obtained experimental values of specific heat of polymerization of MMA and the theoretical one has been found~\cite{link0}. Theoretical value of $11.0 \,\text{kJ}/\text{mol}$ is in accordance with the experimental one of $11.7 \,\text{kJ}/\text{mol}$. 
@@ -380,29 +375,19 @@ In Figure \ref{fig:wabs1} the charts reporting water absorption over time for fi
 \subfloat[][]
 {\includegraphics[scale=0.35]{wabs1}} \quad 
 \subfloat[][]
-{\includegraphics[scale=0.35]{wabs2}} \quad 
-\subfloat[][]
-{\includegraphics[scale=0.35]{wabs3}} \quad 
-\subfloat[][]
-{\includegraphics[scale=0.35]{wabs4}} 
+{\includegraphics[scale=0.35]{wabs2}}
 \captionsetup{justification=centering}
-\caption{Water absorption curves for: (a) first polymerization, no heat treatment, (b) first polymerization, heat treatment, (c) second polymerization, no heat treatment and (d) second polymerization, heat treatment.}
+\caption{Water absorption curves for: (a) P1 and (b) P2.}
 \label{fig:wabs1}
-\end{figure}
-
+\end{figure}\\
 From charts it can be stated how the presence of HEMA increases the water absorption, while the heat treatment has as opposite effect, reducing the amount of water absorbed by PMMA. These effects are justified by the presence of OH groups in the HEMA monomer, that are responsible of enhanced hydrophilicity of the final polymer. On the other side, the heat treatment seems to be related to a smaller hydrophilicity, probably due to the partial evaporation of non-polymerized monomer and for the higher degree of polymerization induced by an increase of temperature and thus the kinetics. 
 \newpage
 In Figure \ref{fig:wabs2} the charts reporting water absorption over time for the three polymerizations are reported, considering spheroidal samples. 
 \begin{figure}[htp]
 \centering
-\subfloat[][]
-{\includegraphics[scale=0.27]{wabs1s}} \quad 
-\subfloat[][]
-{\includegraphics[scale=0.27]{wabs2s}} \quad
-\subfloat[][]
-{\includegraphics[scale=0.27]{wabs3s}}
+{\includegraphics[scale=0.35]{wabs_s}}
 \captionsetup{justification=centering}
-\caption{Water absorption curves for: (a) first, (b) second and (c) third case.}
+\caption{Water absorption curves for samples S1, S2 and S3.}
 \label{fig:wabs2}
 \end{figure}
 
